--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/appsettings.json
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "Default": "Server=localhost; Database=AbpProjectNameDb; Trusted_Connection=True;"
   },
+  "Abp": {
+    "RedisCache": {
+      "ConnectionString": "localhost",
+      "DatabaseId": 8
+    }
+  },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
     "ClientRootAddress": "http://localhost:4200/",
