--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/log4net.config
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/log4net.config
@@ -1,21 +1,120 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender" >
-    <file value="App_Data/Logs/Logs.txt" />
+  <appender name="WARNFileAppender" type="log4net.Appender.RollingFileAppender">
+    <Encoding value="UTF-8" />
+    <!--<file type="log4net.Util.PatternString" value="Logs\%-5level" />-->
+    <file value="Logs/" />
+    <!--记录日志写入文件时，不锁定文本文件，防止多线程时不能写Log,官方说线程非安全-->
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+    <!--按照何种方式产生多个日志文件(日期[Date],文件大小[Size],混合[Composite])-->
+    <rollingStyle value="Composite" />
+    <!--按照日期格式输出文件路径-->
+    <datePattern value="yyyyMMdd/WARN'.txt'"/>
+    <!--是否只写到一个文件中-->
+    <staticLogFileName value="false"/>
+    <!--每个文件的大小-->
+    <maximumFileSize value="1MB"/>
+    <!--最多产生的日志文件数，超过则只保留最新的n个。设定值value="－1"为不限文件数-->
+    <maxSizeRollBackups value="100"/>
+    <!--程序启动后，是否追加到文件-->
     <appendToFile value="true" />
-    <rollingStyle value="Size" />
-    <maxSizeRollBackups value="10" />
-    <maximumFileSize value="10000KB" />
-    <staticLogFileName value="true" />
+    <!--日志缓存大小-->
+    <bufferSize value="128" />
+    <!--日志格式-->
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%-5level %date [%-5.5thread] %-40.40logger - %message%newline" />
     </layout>
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <param name="LevelMin" value="WARN"/>
+      <param name="LevelMax" value="WARN"/>
+    </filter>
+  </appender>
+  <appender name="DEBUGFileAppender" type="log4net.Appender.RollingFileAppender" >
+    <Encoding value="UTF-8" />
+    <file value="Logs/" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+    <rollingStyle value="Composite" />
+    <datePattern value="yyyyMMdd/DEBUG'.txt'"/>
+    <staticLogFileName value="false"/>
+    <maximumFileSize value="1MB"/>
+    <maxSizeRollBackups value="100"/>
+    <appendToFile value="true" />
+    <bufferSize value="128" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%-5level %date [%-5.5thread] %-40.40logger - %message%newline" />
+    </layout>
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <param name="LevelMin" value="DEBUG"/>
+      <param name="LevelMax" value="DEBUG"/>
+    </filter>
+  </appender>
+  <appender name="INFOFileAppender" type="log4net.Appender.RollingFileAppender">
+    <Encoding value="UTF-8" />
+    <file value="Logs/" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+    <rollingStyle value="Composite" />
+    <datePattern value="yyyyMMdd/INFO'.txt'"/>
+    <staticLogFileName value="false"/>
+    <maximumFileSize value="1MB"/>
+    <maxSizeRollBackups value="100"/>
+    <appendToFile value="true" />
+    <bufferSize value="128" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%-5level %date [%-5.5thread] %-40.40logger - %message%newline" />
+    </layout>
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <param name="LevelMin" value="INFO"/>
+      <param name="LevelMax" value="INFO"/>
+    </filter>
+  </appender>
+  <appender name="ErrorFileAppender" type="log4net.Appender.RollingFileAppender" >
+    <Encoding value="UTF-8" />
+    <file value="Logs/" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+    <rollingStyle value="Composite" />
+    <datePattern value="yyyyMMdd/ERROR'.txt'"/>
+    <staticLogFileName value="false"/>
+    <maximumFileSize value="1MB"/>
+    <maxSizeRollBackups value="100"/>
+    <appendToFile value="true" />
+    <bufferSize value="128" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%-5level %date [%-5.5thread] %-40.40logger - %message%newline" />
+    </layout>
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <param name="LevelMin" value="ERROR"/>
+      <param name="LevelMax" value="ERROR"/>
+    </filter>
+  </appender>
+  <appender name="FATALFileAppender" type="log4net.Appender.RollingFileAppender" >
+    <Encoding value="UTF-8" />
+    <file value="Logs/" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+    <rollingStyle value="Composite" />
+    <datePattern value="yyyyMMdd/FATAL'.txt'"/>
+    <staticLogFileName value="false"/>
+    <maximumFileSize value="1MB"/>
+    <maxSizeRollBackups value="100"/>
+    <appendToFile value="true" />
+    <bufferSize value="128" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%-5level %date [%-5.5thread] %-40.40logger - %message%newline" />
+    </layout>
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <param name="LevelMin" value="FATAL"/>
+      <param name="LevelMax" value="FATAL"/>
+    </filter>
   </appender>
   <root>
-    <appender-ref ref="RollingFileAppender" />
-    <level value="DEBUG" />
+    <!--优先级 FATAL > ERROR > WARN > INFO > DEBUG-->
+    <!--<appender-ref ref="RollingFileAppender" />
+    <level value="DEBUG" />-->
+
+    <level value="ALL"/>
+    <appender-ref ref="WARNFileAppender"/>
+    <appender-ref ref="DEBUGFileAppender"/>
+    <appender-ref ref="INFOFileAppender"/>
+    <appender-ref ref="ErrorFileAppender"/>
+    <appender-ref ref="FATALFileAppender"/>
   </root>
-  <logger name="NHibernate">
-    <level value="WARN" />
-  </logger>
 </log4net>
