--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/appsettings.json
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/appsettings.json
@@ -10,8 +10,8 @@
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
-    "ClientRootAddress": "http://localhost:9527/",
-    "CorsOrigins": "http://localhost:9527,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    "ClientRootAddress": "http://localhost:9528/",
+    "CorsOrigins": "http://localhost:9527,http://localhost:9528,http://localhost:8080,http://localhost:8081,http://localhost:3000"
   },
   "Authentication": {
     "JwtBearer": {
