--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/log4net.config
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/log4net.config
@@ -3,12 +3,12 @@
   <appender name="WARNFileAppender" type="log4net.Appender.RollingFileAppender">
     <Encoding value="UTF-8" />
     <!--<file type="log4net.Util.PatternString" value="Logs\%-5level" />-->
-    <file value="Logs/" />
+    <file value="App_Data/Logs/" />
     <!--记录日志写入文件时，不锁定文本文件，防止多线程时不能写Log,官方说线程非安全-->
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
     <!--按照何种方式产生多个日志文件(日期[Date],文件大小[Size],混合[Composite])-->
     <rollingStyle value="Composite" />
-    <!--按照日期格式输出文件路径-->
+    <!--按照日期格式输出文件路径，注意 .txt 需要添加单引号-->
     <datePattern value="yyyyMMdd/WARN'.txt'"/>
     <!--是否只写到一个文件中-->
     <staticLogFileName value="false"/>
@@ -31,7 +31,7 @@
   </appender>
   <appender name="DEBUGFileAppender" type="log4net.Appender.RollingFileAppender" >
     <Encoding value="UTF-8" />
-    <file value="Logs/" />
+    <file value="App_Data/Logs/" />
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
     <rollingStyle value="Composite" />
     <datePattern value="yyyyMMdd/DEBUG'.txt'"/>
@@ -50,7 +50,7 @@
   </appender>
   <appender name="INFOFileAppender" type="log4net.Appender.RollingFileAppender">
     <Encoding value="UTF-8" />
-    <file value="Logs/" />
+    <file value="App_Data/Logs/" />
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
     <rollingStyle value="Composite" />
     <datePattern value="yyyyMMdd/INFO'.txt'"/>
@@ -69,7 +69,7 @@
   </appender>
   <appender name="ErrorFileAppender" type="log4net.Appender.RollingFileAppender" >
     <Encoding value="UTF-8" />
-    <file value="Logs/" />
+    <file value="App_Data/Logs/" />
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
     <rollingStyle value="Composite" />
     <datePattern value="yyyyMMdd/ERROR'.txt'"/>
@@ -88,7 +88,7 @@
   </appender>
   <appender name="FATALFileAppender" type="log4net.Appender.RollingFileAppender" >
     <Encoding value="UTF-8" />
-    <file value="Logs/" />
+    <file value="App_Data/Logs/" />
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
     <rollingStyle value="Composite" />
     <datePattern value="yyyyMMdd/FATAL'.txt'"/>
