--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/appsettings.json
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/appsettings.json
@@ -11,7 +11,7 @@
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
     "ClientRootAddress": "http://localhost:9528/",
-    "CorsOrigins": "http://localhost:9527,http://localhost:9528,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    "CorsOrigins": "http://localhost:4200,http://localhost:9527,http://localhost:9528,http://localhost:8080,http://localhost:8081,http://localhost:3000"
   },
   "Authentication": {
     "JwtBearer": {
